# ChangeLog for media-video/ffmpeg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.666 2013/07/20 16:01:24 aballier Exp $

  20 Jul 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-1.2.1.ebuild:
  drop alpha/ia64/sparc keywords due to missing deps

  20 Jul 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-2.0.ebuild,
  ffmpeg-9999.ebuild, metadata.xml:
  Add gme support.

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for alpha, wrt bug #473302

*ffmpeg-2.0 (11 Jul 2013)

  11 Jul 2013; Alexis Ballier <aballier@gentoo.org> +ffmpeg-2.0.ebuild:
  version bump

  02 Jul 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  Add missing wavpack dep

  01 Jul 2013; Jeroen Roovers <jer@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for HPPA (bug #473302).

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for arm, wrt bug #473302

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for ppc64, wrt bug #473302

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for ppc, wrt bug #473302

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for x86, wrt bug #473302

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> ffmpeg-1.0.7.ebuild:
  Stable for amd64, wrt bug #473302

  15 Jun 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild,
  metadata.xml:
  add amrenc useflag to have a more finegrained control, bug #473284

  14 Jun 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  add wavpack useflag

  13 Jun 2013; Michael Weber <xmw@gentoo.org> ffmpeg-0.10.7.ebuild,
  ffmpeg-1.0.6.ebuild, ffmpeg-1.0.7.ebuild, ffmpeg-1.2.1.ebuild,
  ffmpeg-9999.ebuild:
  Depend on SLOT=0 of media-libs/openjpeg (bug 440086)

  24 May 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  add ffhash tool
