@@ -4,22 +4,20 @@ Hash: SHA256
 AUX flashtest.patch 2343 SHA256 fcd05d4ad3f8cc6dd64a55c83279bd5738002100f1cfdf2f4ca8c9547f5b9a28 SHA512 e2994e3b25b207021e00ed982a82efa8ab2fdf2499f5ef97b7f280a0abd33fac639b7e26c26b5ed7dac70931c009b7062b6c91c4b4b38d30a29f8b364a837ba0 WHIRLPOOL 78c41fd6dcd7f698b92ee6f9ac0c5c5d80c8e45c3dffb8c2bff72f0802084b78ce601dd716c6ae7b6bc6641b4f98a1ec33acfe761a13bcfaeafe3677fa6e3ee0
 AUX freiordl.patch 611 SHA256 4857bbf856e2014f41d89d0ed0744f7bb3277e5600a877f2b84e0aae571f3dcf SHA512 1d7491e65fec247d9cb6b14e9a494f55e3a88ca9ce0962b7874e3f3e5c087ca7672bda5949637f4493c49a388070addb9db909c2e384f8a4349609ec02e7dd3f WHIRLPOOL dc2bbc9c95dff14998ef8f7f15c55b9cdc9464e01e036c3b67935d9505596360d103aafb9a50b43e6d2e78950664c4b6f214a874fc6aa29727397130a98e6511
 DIST ffmpeg-0.10.7.tar.bz2 5782181 SHA256 f5f3fc43e0f7789a3cf8f4f379851a5a838dd652144e5d2ad4fc727387678422 SHA512 d84cc9e678ee23b3ce2e0854c0907914042ad15ff0bdf4c62ddee71ec66fb23a2be89a4553c367eb79f6652a134bb33cf3c5e89a169dc1200fdb6f182aea4968 WHIRLPOOL a4fd815da627f20cfa2ea867129286f6016f2b54ca81fc3444edda5f224063173b789b92d1ce3812c3af6449f3652f9972365f63d20acfdb1beadf4bc2a1b6ba
-DIST ffmpeg-1.0.6.tar.bz2 6450599 SHA256 650db1d500a52ebb67fe30ffc83dd475d5e70b45eb3b081f566bfec69ee2f900 SHA512 d5df9e40abfb7c0f757ef861a86b83035f2b9421c66baf5a902b86ed878d15b29715d16fe5c3f84c371cf3ef9eaf761cbe456dcb80b7a071904233517b1d7254 WHIRLPOOL ccd2675a47ceca1046084e0af015445d89dd7f18b34f76b0a46ef7bf3f8b55007710a1ca2f5531f73a793b01a6ff5c3d307be68977b60f6081548d4cca6a03f9
 DIST ffmpeg-1.0.7.tar.bz2 6451535 SHA256 f7e52bd5e0de064e36ecb04adf155c31dd30366a13168fabe61fd135f24d5c11 SHA512 a3a756fe50773551de58113de7b848f6ccb21ed2cf5c5f04387694937152ae978639aa92e4207cc09f384f34093ad2e6ddf7dfb334097f20f1326e13748f57d5 WHIRLPOOL ba2cc60a7bd7de1dca7f6c9ed02874db0f711c273d9616c5eeda0ee2b33fa9e36f55eb812d75e24583f81098505635ccff018b7aea67dbe9b3fd18583042fb73
 DIST ffmpeg-1.2.1.tar.bz2 5968378 SHA256 0302375c3a64e9c2facfa7cbeb1aa333a39fdf6bbacda228cd48e04bf9ee32ca SHA512 71f7318744533938f179b261b888144a19de533c77e0cfbb888a90258508462c84a95d4436727513a4f42af810a84e3e27d965a9c8d6b58c8d56aeeddb834f6c WHIRLPOOL 2ad9d81e9bbaadc0ccafc77c29478b2042dafd4cca71b65805b5b90b03248cda99c49000a80ae62cfb9ccde4fcafbddcab6d99547e2c2824498a893be40cbbb4
 DIST ffmpeg-2.0.tar.bz2 6188516 SHA256 940e1bc4f3e185364099b4ba60d4b952615a4232c5641baa3e9f45d4d748130c SHA512 0cf1284d091d593ff7cb93647baa7227e0d1aef5eac30843a198a9f12a42db7e5d66f15df162d57ac51d07cd78e17d1e577fff425f0e04bd36f414100209d032 WHIRLPOOL f7b305680569d1fc314afc7c23604620612e87cbe6842cbec3c0f469bd0fbb6b2dbf55bded118c57b168940367f8d19a6a6cc5f58cf3545ce582652b86820124
 EBUILD ffmpeg-0.10.7.ebuild 8938 SHA256 f5e01fac8854398bf96c3200c57556e8888138dcda36e8aa9b9578fa62ce4e2c SHA512 91ca4ed62938bc3af03ab5a2030840bbb0f1025f6d5ee2bbb463fe1a9cb7891af3d7beb443b974977360ddf979b35c0a012dc13a5bb837c20aaf0139481b935e WHIRLPOOL a05c7f31aea2d685df8cd5fe6ce36182cbaf48cd9cb7e5c2dfaad34d2637cebe377dae7a46644b3f886e27ac81db98d43f62362da48697a5b978a1ff1ea769d0
-EBUILD ffmpeg-1.0.6.ebuild 9541 SHA256 bc6c3ccb7bd57c636c045e3ce628b1f83c26a474e2e86f052457f5c0d261a1a3 SHA512 257cef9216df82c42adcbebcd9b0ee7e5bca132d0e78c83f7ad4220c23a80e7db67d67da902f90027b518ff05821c7a3f24f9077785b4143dce1df3aba96900b WHIRLPOOL fa2a6c6f4ee164d14acfc2f3cedb742e7d58b8c247c0ec7c55176ba8d82d7041bb215cbb3561ba243de651057115d0acb7fb7501254e143965a3337cc805c30b
 EBUILD ffmpeg-1.0.7.ebuild 9561 SHA256 8262bd5bcff29205fa8476ee69e9b7ada02e2adc576e2c292c2b1137a8f96d65 SHA512 1ce7d49fa2ab5db013643ade55342a07265b4bb34d49ce7e6c19f01ce7db7cde6ba44b004ddf889491444450b8cac5337ef24bf4e16abba1e9a4a65ce1dfcfd6 WHIRLPOOL e0bfe9da424318505f947bf1ec9396acc89098ca378b199da5271c6e166f8e3e9e9734fff359e7647530e476f4d43d9dbb5dfc2b6a217efdeeb05f10e611a2e1
 EBUILD ffmpeg-1.2.1.ebuild 8906 SHA256 c21f557ecbb86f6f9b7ebc1dc82af7d6947c1b303c0ed5745df395d546f1c463 SHA512 f03d8e0249f5f7e0dc15e76aa3ebe72015b265c41a30d3862d01953e8eb2cbde83bd0048d478b58bbe2bb01d95531a36ac50cd54bd4ec5132fd5ad45acbad65b WHIRLPOOL b187d9ad2e72abedf4c979b7c833516c216843f8ca177f5a7c246a133682536b035eea66ba0cfd7414f44469ef47b7e6537a494afda990b86d08e80e1c36f2be
 EBUILD ffmpeg-2.0.ebuild 9105 SHA256 dd39f1217ce7c027123165f931a12800493fe9e50883528ebf0e8b1c9c832cf9 SHA512 61aa38691145405d018334047cd1a6b4d50797a4e03e60ab43b808991ef0ec6a3eb1e13ae5d902534cb8b2f2bfa53a4bc7c1e50b388b6180ca442a1ff7ad7c15 WHIRLPOOL ac5003ef99c364b29b414a0d9dd0a88c5aaa232aa962f37b03c103c76eccc21f047726a7b7c0dec571a61d259a7ac48c2c5d5a0b6dba5b2186efaf22fc0d4abb
 EBUILD ffmpeg-9999.ebuild 9108 SHA256 e23412fff1e17d358165b1648d6cd7fccd6803c485749318c4e18493bb795fd0 SHA512 0526ea4f223e1f7c3d7f0db46ff297e3cd37c57f7d297d8a582d64d1a118311633ed9a012da9e491aa094f360bd2601447f0925d6f616c98298a6ded245b0aa2 WHIRLPOOL dfdd6a352136fc6f274c47b2aa1716560a757bffeb8902d3d8c7af2beeb6c37e0ea39bcc2263fbcd76367a588f03723c746514d880a06655532fcdff044ad30e
-MISC ChangeLog 93107 SHA256 7d4c5173a9358de5976ce8e7ed302ca0345467d09fcdf96d1398f90351db86ce SHA512 67d5f83e20f1ba6f2cbd50b6f2051c3debda6dd1c0d609227dd721d648ee4ccddf5535cb50d52f48c6964fac8367ab289b60ed281fcabf35dc91213f3baf25f9 WHIRLPOOL b3a6db2519b3facdfd7342b064ab2b22ab14e1537655f23550d5e768444a30be1a29bb8716f0dd6f271c90fcc54c13ef466723359d4c9b3e926d9be7768ba192
+MISC ChangeLog 93195 SHA256 e4e8f44a026099268a883a440b99e4bf4f48ed52c4007108eda11d35fb90b2dc SHA512 b5014b7b6374cd9e736055e3949e7382a6edd609cf197ba6d77f8a64bb3a5e4e3f7e66d369135ccc1b98fcc2e4131f8f818709932e4b77aa76ed320c9a628e60 WHIRLPOOL 879a9a4d91c1f9853dc5ff9be4777cd9903b8a535d4053985da4f4124509941923a2bf1b5b44205d44f39215da0a4a6a61d57c0da4a61c6ceaa75011bef825df
 MISC metadata.xml 3860 SHA256 0480b2ab42cca74fa5abe6d7f40ccf82c81d19eef97b88878ec07afc83ad6fa8 SHA512 3a1f45a406c90cd54354f5d78d9e51883dc530f904b56c822ae843e87632a6d64e11aa23c874bd47ba40673addc579d9b76cf573434717ab1f0fb4d8ff4e310c WHIRLPOOL f62cf68b99f10188af3f5b7cca0a6daf614cfe048ebd8c4f802a47105a3f839d680487ae1be2144d10dcf5c475502ad3d4092d6fd4c491a924cfadada1f62ffe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHqtFcACgkQvFcC4BYPU0rdgQCgyn8mm7SPNqIJ4qavXN3FFmhq
-LHgAnjdrTPmf72bBp88VdqNISi21FuaJ
-=iuMp
+iEYEAREIAAYFAlHqtOYACgkQvFcC4BYPU0qcZgCbB8PwYCBKuG+NilIWLEakoeUA
+YeoAoK9i4zfXo/iaMrWyzjEGCxoNKJVE
+=DsHD
 -----END PGP SIGNATURE-----
