@@ -1,6 +1,9 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.666 2013/07/20 16:01:24 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.667 2013/07/20 16:03:48 aballier Exp $
+
+  20 Jul 2013; Alexis Ballier <aballier@gentoo.org> -ffmpeg-1.0.6.ebuild:
+  remove old
 
   20 Jul 2013; Alexis Ballier <aballier@gentoo.org> ffmpeg-1.2.1.ebuild:
   drop alpha/ia64/sparc keywords due to missing deps
